--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
@@ -18,7 +18,7 @@
           </div>
 
           <div class="four wide field ">
-            <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+            <button class="ui mini green button" (click)="addRiskAssRiskWsHdr()">
               <i class="add icon"></i>
               เพิ่ม
             </button>
@@ -34,7 +34,7 @@
               <th style="text-align: center !important">วันที่สร้าง</th>
               <th style="text-align: center !important">ผู้สร้าง</th>
               <th style="text-align: center !important">สถานะการใช้งาน</th>
-              <th style="text-align: center !important">Action</th>
+              <th style="text-align: center !important">จัดการ</th>
             </tr>
           </thead>
         </table>
@@ -51,6 +51,7 @@
               กำหนดเงื่อนไขปัจจัยเสี่ยงรวม
             </button>
             <button class="ui mini  button" (click)="cancelFlow()">
+              <i class="close icon"></i>
               ยกเลิก
             </button>
           </div>
