--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-2/int09-1-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-2/int09-1-1-2.component.html
@@ -375,8 +375,8 @@
     <br>
     <div class="ui center aligned grid">
       <div class="eight wide column">
-        <button class="ui  grey button" type="button" (click)="clickBack()">กลับ</button>
-        <button class="ui  primary button" type="button" (click)="save()">บันทึก</button>
+        <button class="ui mini primary button" type="button" (click)="save()"><i class="save icon"></i>บันทึก</button>
+        <button class="ui mini button" type="button" (click)="clickBack()"><i class="close icon"></i>ยกเลิก</button>
       </div>
     </div>
     <br>
