--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
@@ -12,7 +12,7 @@
   <div class="inline fields" style="text-align: center !important;">เดินทางไป &nbsp; {{travelToDescription}}</div>
   <br>
   <div class="inline fields" style="text-align: right !important;">
-    <button class="ui green button" type="button" (click)="modalAddDocument()">เพิ่มเอกสาร</button>
+    <button class="ui mini green button" type="button" (click)="modalAddDocument()"><i class="plus icon"></i>เพิ่มเอกสาร</button>
   </div>
   <table id="tableData" class="ui small celled table nowrap striped selectable" style="width: 100%">
     <thead>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="two wide field">
-        <button class="ui green button" type="submit">อัพโหลด</button>
+        <button class="ui mini yellow button" type="submit"><i class="upload icon"></i>อัพโหลด</button>
       </div>
 
     </div>
@@ -75,7 +75,7 @@
     </table>
   </div>
   <div class="ui form center aligned grid">
-      <button class="ui  grey button" type="button" (click)="clickBack()">กลับ</button>
+      <button class="ui mini button" type="button" (click)="clickBack()"><i class="close icon"></i>ยกเลิก</button>
   </div> 
   <br><br>
 </div>
