--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
@@ -1,7 +1,10 @@
+<app-breadcrumb [route]="breadcrumb" ></app-breadcrumb>
+
 <div class="ui grid">
+  <!-- form 1 -->
   <div class="sixteen wide column" *ngIf="!getConditionShow()">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายละเอียดหัวกระดาษทำการ</span>
+      <span>รายละเอียดหัวกระดาษทำการ{{riskAssRiskWsHdr.riskHdrName}} </span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
@@ -14,7 +17,6 @@
             <input type="text" placeholder="ชื่อกระดาษทำการ" maxlength="100" class="custom" name="riskHrdPaperName" id="riskHrdPaperName"
               [(ngModel)]="riskHrdPaperName">
           </div>
-
         </div>
         <div class="inline fields">
           <div class="two wide field "></div>
@@ -31,26 +33,24 @@
             <input type="text" placeholder="ผู้ตรวจ" class="custom" name="userCheck" id="userCheck" [(ngModel)]="userCheck">
           </div>
         </div>
-
         <div class="inline fields"></div>
-
       </div>
-
     </div>
-
-
   </div>
+
+  <!-- form 2 -->
   <div class="sixteen wide column ">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>เพิ่มข้อมูลกระดาษทำการ</span>
+      <span>เพิ่มข้อมูลกระดาษทำการ{{riskAssRiskWsHdr.riskHdrName}}</span>
     </div>
-
     <div class="ui attached segment">
       <div class="ui form">
         <div class="ui top attached tabular menu">
           <a class="active item" data-tab="first">เพิ่มข้อมูล</a>
           <a class="item" data-tab="second">เพิ่มข้อมูล Excel File</a>
         </div>
+
+        <!-- insert form 1 -->
         <div class="ui bottom attached active tab segment" data-tab="first">
           <div class="inline fields">
             <div class="two wide field "></div>
@@ -60,7 +60,6 @@
             <div class="ten wide field ">
               <input type="text" placeholder="ชื่อโครงการ" maxlength="100" class="custom" name="projectBase" id="projectBase" [(ngModel)]="projectBase">
             </div>
-
           </div>
           <div class="inline fields">
             <div class="two wide field "></div>
@@ -77,20 +76,18 @@
               <input type="text" placeholder="ค่าความเสี่ยง" class="custom" name="riskCost" id="riskCost" [(ngModel)]="riskCost">
             </div>
           </div>
-
-          <div class="inline fields"></div>
-          <div class="inline fields">
-            <div class="sixteen wide field ">
-              <div class="seven wide field "></div>
-              <button class="ui mini primary button" (click)="addObjRiskDtl() ">
-                <i class="save icon"></i>
+          <br>
+          <div class="ui center aligned grid">
+            <div class="four wide column">
+              <button class="ui mini green button" (click)="addObjRiskDtl() ">
+                <i class="plus icon"></i>
                 เพิ่ม
               </button>
-
             </div>
-
           </div>
         </div>
+
+      <!-- insert form 1 -->
         <div class="ui bottom attached tab segment" data-tab="second">
           <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
             <div class="ui attached segment">
@@ -108,14 +105,13 @@
                   </div>
                 </div>
               </div>
-
               <div class="ui center aligned grid">
                 <div class="four wide column">
-                  <button class="ui mini primary button" type="submit">
+                  <button class="ui mini yellow button" type="submit">
                     <i class="upload icon"></i>
                     อัพโหลด
                   </button>
-                  <button class="ui mini button" type="reset">
+                  <button class="ui mini red button" type="reset">
                     <i class="trash alternate icon"></i>
                     ลบไฟล์
                   </button>
@@ -124,7 +120,7 @@
             </div>
           </form>
         </div>
-
+        <!-- table -->
         <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%">
           <thead>
             <tr>
@@ -133,14 +129,15 @@
               <th rowspan="2" style="text-align: center !important" class="two wide field ">หน่วยงาน</th>
               <th rowspan="2" style="text-align: center !important" class="two wide field ">ค่าความเสี่ยง</th>
               <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
-              <th rowspan="2" style="text-align: center !important">ลบ</th>
+              <!-- <th rowspan="2" style="text-align: center !important">ลบ</th> -->
             </tr>
             <tr>
-              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important"class="one wide field ">RL</th>
-              <th style="text-align: center !important" class="one wide field ">แปลค่า</th>
+              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important"class="one wide field ">อัตราความเสี่ยง</th>
+              <th style="text-align: center !important" class="one wide field ">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
         </table>
+
         <div class="inline fields "></div>
         <div class="inline fields ">
           <div class="sixteen wide field ">
@@ -153,30 +150,30 @@
               <i class="setting icon"></i>
               กำหนดเงื่อนไขความเสี่ยง
             </button>
-            <button class="ui mini primary button" (click)="ExportOtherDtl()">
+            <button class="ui mini yellow button" (click)="ExportOtherDtl()">
               <i class="print icon"></i>
               ส่งออก
             </button>
-            <button class="ui mini  button" (click)="cancelFlow()">
+            <button class="ui mini button" (click)="cancelFlow()">
+                <i class="close icon"></i>
               ยกเลิก
             </button>
           </div>
-
         </div>
       </div>
     </div>
   </div>
+
+  <!-- form condition -->
   <div class="sixteen wide column" *ngIf="getConditionShow()">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
+      <span>กำหนดเงื่อนไขความเสี่ยง{{riskAssRiskWsHdr.riskHdrName}}</span>
     </div>
-
     <div class="ui attached segment">
       <div class="ui form">
         <condition [riskId]="id" [riskType]="'OTHER'" [page]="'int08-1-6'" (out)="closeConditionRL($event)"></condition>
       </div>
       <br/>
-
     </div>
   </div>
 
