--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -142,12 +142,12 @@
                 </select>
             </div>
         </div>
-
+<br>
         <div class="ui center aligned grid">
             <div class="eight wide column">
-                <button class="ui  primary button" type="button" (click)="clickSearch()">ค้นหา</button>
-                <button class="ui  grey button" type="button" (click)="clickClear()"> ล้างข้อมูล</button>
-                <button class="ui  green button" type="button" (click)="modalAddHead()">รายการใหม่</button>
+                <button class="ui mini primary button" type="button" (click)="clickSearch()"><i class="search icon"></i>ค้นหา</button>
+                <button class="ui mini grey button" type="button" (click)="clickClear()"><i class="sync icon"></i> ล้างข้อมูล</button>
+                <button class="ui mini  green button" type="button" (click)="modalAddHead()"><i class="plus icon"></i>รายการใหม่</button>
             </div>
         </div>
         <br>
